feat(raid0): testing + fixes
